--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint": "tsc --noEmit",
     "prepublishOnly": "npm run build"
   },
+  "private": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Forsrobin/onboard-engine.git"
