--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onboard-engine",
-  "version": "1.2.2",
+  "version": "1.3.1",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -55,8 +55,6 @@
     "vitest": "^4.0.17"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "js-cookie": "^3.0.5",
-    "tailwind-merge": "^2.6.0"
+    "js-cookie": "^3.0.5"
   }
 }
