--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onboard-engine",
-  "version": "1.3.1",
+  "version": "1.4.1",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -22,6 +22,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "tsc --noEmit",
+    "lint:eslint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write .",
+    "check-format": "prettier --check .",
     "prepublishOnly": "npm run build"
   },
   "private": false,
@@ -48,8 +51,14 @@
     "@types/node": "^22.10.6",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "jsdom": "^26.0.0",
+    "prettier": "^3.8.0",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3",
     "vitest": "^4.0.17"
